# rns-dns

./: Cargo.toml  LICENSE  NOTES.md  README.md  SPECIFICATION.md  TOFIX.md  develop.nix  flake.nix  note  notes.md  temp_notes.md  tmux.sh
log/: Cargo.toml
log/src/: README.md  lib.rs
logging/: Cargo.toml
ref_material/experiments/: client.py
reference_material/: develop.nix
reference_material/experiments/: server.py
reference_material/reticulum-test-rs/: Cargo.toml  README.md  run-client.sh  shell.nix
rns-dns/: Cargo.toml
rns-dns/_reference_material/reticulum-test-rs/: .gitignore  run-server.sh
rns-dns/src/: client.rs  main.rs  router.rs  server.rs  server_.rs  tui.rs  types.rs
rns-dns/src/server/: mod.rs  parser.rs  payload_in.rs  server.rs
rns-dns/src/utilites/: error.rs  mod.rs
src/: echo_server.rs  hello_client.rs  lib.rs  logging.rs  main.rs  note  types.rs
