[package]
name = "rns-dns"
version = "0.1.0"
edition = "2024"

[dependencies]

# logging 
colored = "3.0.0"
chrono = "0.4.41"

# rns
tokio = { version = "1.46.1", features = ["full"] }
rand = "0.8"
rand_chacha = "0.3"
rand_core = "0.6"
# rand_core = { version = "0.6.4", features = ["getrandom"] }
reticulum = { git = "https://github.com/BeechatNetworkSystemsLtd/Reticulum-rs", rev = "f1f1668d1eca6a2adc98aea4ac0fd1a499429e2e"}


[[example]]
name = "hello-server"
path = "src/echo_server.rs"

[[example]]
name = "hello-client"
path = "src/hello_client.rs"

